# OpenCl

./: CMakeLists.txt  ImageConvert.cl  OpenCl.cpp  OpenClManager.cpp  OpenClManager.h  README.md  main.cpp
